assignments/country-metadata/main/default/objects/Country__mdt/fields/CurrencySymbol__c.field-meta.xml
<CustomField>
    <fullName>CurrencySymbol__c</fullName>
    <label>Currency Symbol</label>
    <length>5</length>
    <type>Text</type>
</CustomField>