assignments/country-metadata/main/default/objects/Country__mdt/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>