assignments/country-metadata/main/default/objects/Country__mdt/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <label>latitude</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>